crates/panache-parser/tests/snapshots/yaml__yaml_suite_N782.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: N782
input: "[\n--- ,\n...\n]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_TRAILING_CONTENT_AFTER_DOCUMENT_START:trailing content after document start marker@2..7]
