crates/panache-parser/tests/snapshots/yaml__yaml_suite_NHX8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: NHX8
input: ":\n\n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
