crates/panache-parser/tests/snapshots/yaml__yaml_suite_NJ66.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: NJ66
input: "---\n- { single line: value}\n- { multi\n  line: value}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
