crates/panache-parser/tests/snapshots/yaml__yaml_suite_P2AD.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: P2AD
input: "- | # Empty header↓\n literal\n- >1 # Indentation indicator↓\n  folded\n- |+ # Chomping indicator↓\n keep\n\n- >1- # Both indicators↓\n  strip\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
