crates/panache-parser/tests/snapshots/yaml__yaml_suite_P2EQ.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: P2EQ
input: "---\n- { y: z }- invalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_FLOW_CLOSER:unexpected flow closing token@13..14]
