crates/panache-parser/tests/snapshots/yaml__yaml_suite_P94K.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: P94K
input: "key:    # Comment\n        # lines\n  value\n\n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
