crates/panache-parser/tests/snapshots/yaml__yaml_suite_PBJ2.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: PBJ2
input: "american:\n  - Boston Red Sox\n  - Detroit Tigers\n  - New York Yankees\nnational:\n  - New York Mets\n  - Chicago Cubs\n  - Atlanta Braves\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
