crates/panache-parser/tests/snapshots/yaml__yaml_suite_PUW8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: PUW8
input: "---\na: b\n---\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
